# grep-sdk

./: .gitignore  .npmignore  README.md  forflatning.md  mat.json  package-lock.json  package.json  pyproject.toml  rle.json  test_sdk.ts  tsconfig.json
data/: Grep_eksempelsamling_json.md  KMS1107.json  KV370.json  aarstrinn_aarstrinn_fov_1.json  coverage_report.json  dokumenttype_dokumenttype_kompetansebevis_1.json  eksamensform_eksamensform_2_1.json  eksamensordning_eksamensordning_1_1.json  fagkategori_FKAT100_1.json  fagkode_ADI2003_2.json  fagkode_AMM3011_5.json  fagkode_FSP5801_1.json  fagkode_HISRS06_4.json  fagkode_SPR3024_3.json  fagomraade_FOMR701_1.json  fagtype_fagtype_yrkesfaglig_fordypning_1.json  grunnleggende_ferdighet_lk20_GF1_1.json  hovedomraade_HO1599_1.json  karakter_karakter_hm_1.json  kjerneelement_lk20_KE1120_1.json  kompetansemaal_K1_1.json  kompetansemaal_lk20_KM10543_2.json  kompetansemaal_lk20_KM11869_1.json  kompetansemaalsett.csv  kompetansemaalsett_KMS1107_1.json  kompetansemaalsett_lk20.csv  kompetansemaalsett_lk20_KV370_1.json  laereplan_AMM3-02_1.json  laereplan_RLE1-02_2.json  laereplan_SAS1-04_3.json  laereplan_lk20_ASK03-01_4.json  laereplan_lk20_BET05-01_2.json  laereplan_lk20_ENG05-01_3.json  laereplan_lk20_MOK01-02_1.json  laereplanstruktur_laereplanstruktur_1_1.json  loepstype_loepstype_kryssloep_1.json  lol.json  merkelapp_forsoek_1.json  merkelapp_laerefag_med_fordypningsomraader_2.json  merkelapp_tverrfaglig_eksamen_3.json  (+31 more)
dotnet_sdk/: GrepSdk.sln  README.md
java_sdk/: README.md  build.gradle  gradle.properties
(+25 files in other folders)
