[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aremjolsnes-grep-sdk"
version = "0.9.9"
description = "Offisiell Python SDK for Grep (Kunnskapsløftet)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0"
]
authors = [
  { name = "Are Mjølsnes", email = "post@aremjolsnes.no" },
]

[tool.hatch.build.targets.wheel]
packages = ["python_sdk"]